--- a/style.css
+++ b/style.css
@@ -3,21 +3,8 @@
     padding: 0;
     box-sizing: border-box;
 }
-.navbar{
-    width: 100%;
-    grid-column: 2/5;
-    grid-row: 1/2;
-}
-.img{
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-}
-.sidebar{
-    background-color: rgb(4, 4, 65);
-    grid-column: 1/2;
-    grid-row: 1/3;
-}
+
+
 .main-section{
     background-color: white;
     /* background-color: rgb(255, 233, 193); */
@@ -45,4 +32,107 @@
     display: grid;
     grid-template-columns: 1fr 2fr 2fr 1fr;
     grid-template-rows: 200px 555px;
+}
+
+/* navbar */
+.navbar{
+    width: 100%;
+    grid-column: 2/5;
+    grid-row: 1/2;
+}
+.navbar_img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+.navbar_desc{
+    position: relative;
+    bottom: 60px;
+    left: 20px;
+}
+body{
+    overflow: hidden;
+}
+
+/* sidebar */
+.sidebar{
+    background-color: rgb(4, 4, 65);
+    grid-column: 1/2;
+    grid-row: 1/3;
+}
+.profile-img{
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+}
+.sidebar_container{
+    height: 100%;
+    max-height: 720px;
+    max-width: 280px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.sidebar h3{
+    color: white;
+    font-size: 30px;
+}
+.notepad_logo{
+    width: 30px;
+}
+.input-container{
+    width: 180px;
+    border-bottom: 1px solid white;
+}
+#search{
+    color: white;
+    background-color: transparent;
+    border: none;
+    position: relative;
+    left: 10px;
+    bottom: 3px;
+}
+#search::placeholder{
+    color: white;
+}
+#search:focus{
+    outline: none;
+}
+#search::-webkit-search-cancel-button{
+    display: none;   
+}
+.sidebar-desc li{
+    list-style-type: none;
+    color: white;
+}
+.sidebar-desc ul{
+    height: 45vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.ellipsis{
+    width: 14px;
+    color: white;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.profile{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.profile h5{
+    color: white;
+    position: relative;
+    left: 9px;
+}
+.profile-container{
+    width:12rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
