updating Notepad app

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ body{
     flex-direction: column;
     justify-content: space-around;
 }
-.ellipsis{
+.ellipsis-icon{
     width: 14px;
     color: white;
     display: flex;
@@ -135,4 +135,172 @@ body{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+
+/*main*/
+.quick-notes_background{
+    width: 340px;
+    flex-grow: 2;
+}
+main{
+    padding: 1rem;
+    width: 60rem;
+    flex-shrink: 10;
+}
+.note{
+    padding: 0.5rem;
+    max-height: 150px;
+}
+.note p{
+    overflow: hidden;
+}
+.note-container{
+    background-color: #45aabc;
+    width: 220px;
+    height: 210px;
+    max-height: 210px;
+    border-radius: 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.square{
+    background:linear-gradient(to bottom right,#125769 50%, white 50%);
+    width: 40px;
+    height: 40px;
+}
+.edge-triangle{
+    position: relative;
+    left: 180px;
+}
+.note-date-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: rgb(205, 205, 205);
+    padding: 0.5rem;
+}
+.note-container h3{
+    padding-bottom: 0.5rem;
+}
+.note-container p{
+    line-height: 1.5rem;
+}
+.main_section_container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-column-gap: 5px;
+    grid-row-gap: 1.5rem;
+}
+.note__title{
+    font-size: 20px;
+    margin: 0 1rem 1rem;
+}
+.ellipsis{
+    width: 14px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+/*note section*/
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn-primary{
+    border: none;
+    background-color: #EE4E86;
+    margin: 0 2rem;
+    padding: 0.6rem 2rem;
+    border-radius: 0.75rem;
+    cursor: pointer;
+}
+.par{
+    padding: 1rem;
+    border-bottom: 1px solid gray;
+    margin: 1rem;
+}
+.p{
+    padding: 0.4rem 1rem;
+    line-height: 3rem;
+    position: absolute;
+    color: gray;
+}
+.note-input{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    
+}
+.note-title{
+    padding: 0.5rem 0;
+    width: 100%;
+    background: transparent;
+    border: none;
+    border-bottom:1px solid gray ;
+
+}
+.note-title::placeholder{
+    font-size: 20px;
+    font-family: serif;
+}
+.note-icons{
+    width: 30%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+    top: 2px;
+}
+.icon{
+    width: 16px;
+    height: 16px;
+}
+.btn-tertiary{
+    background: transparent;
+    border: none;
+    
+}
+.text-decoration{
+    display: flex;
+    justify-content: space-around;
+    border: 1px solid gray;
+    padding: 3px;
+    border-radius: 5px;
+}
+
+.quick-notes{
+    background-color: rgb(253, 223, 189);
+    padding: 1rem;
+    border-radius: 15px;
+    margin-bottom: 0.5rem;
+}
+.quick-notes_title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.new-note{
+    background-color: rgb(253, 223, 189);
+    padding: 1rem;
+    border-radius: 15px;
+    margin-bottom: 0.5rem;
+}
+.note-icon{
+    width: 20px;
+    height: 20px;
+    position: relative;
+    top: 3px;
+}
+.quick-notes-btn{
+    background-color: rgb(229, 163, 135);
+    border: none;
+    border-radius: 5px;
+    margin: 5px 0;
+    width: 100%;
+    padding: 0.5rem 1rem ;
+    text-align: start;
 }
